--- a/rig/Makefile.sources
+++ b/rig/Makefile.sources
@@ -26,6 +26,8 @@ rig_common_sources = \
 	components/rig-pointalism-grid.c \
 	components/rig-button-input.h \
 	components/rig-button-input.c \
+	components/rig-text.h \
+	components/rig-text.c \
 	rig-logs.h \
 	rig-logs.c \
 	rig-entity.h \
@@ -53,12 +55,12 @@ rig_common_sources = \
 	rig-pb.c \
 	rig-load-save.h \
 	rig-load-save.c \
-    	rig-split-view.h \
-    	rig-split-view.c \
-    	rig-view.h \
-    	rig-view.c \
-    	rig-camera-view.h \
-    	rig-camera-view.c \
+	rig-split-view.h \
+	rig-split-view.c \
+	rig-view.h \
+	rig-view.c \
+	rig-camera-view.h \
+	rig-camera-view.c \
 	rig-types.h \
 	rut-renderer.h \
 	rut-renderer.c \
@@ -78,7 +80,18 @@ rig_common_sources = \
 	rig-code.h \
 	rig-code.c \
 	rig-code-module.h \
-	rig-code-module.c
+	rig-code-module.c \
+	usc_impl.h \
+	usc_impl.c \
+	rig-text-pipeline-cache.h \
+	rig-text-pipeline-cache.c \
+	rig-text-engine-funcs.h \
+	rig-text-engine-funcs.c \
+	rig-text-engine.h \
+	rig-text-engine-private.h \
+	rig-text-engine.c \
+	rig-text-renderer.h \
+	rig-text-renderer.c
 
 rig_debug_sources = \
 	rig-pb-debug.h \
