toys: add vr-test toy

--- a/toys/Makefile.am
+++ b/toys/Makefile.am
@@ -6,12 +6,15 @@ AM_CPPFLAGS = \
 	-I$(top_builddir)/rut \
 	-I$(top_srcdir)/libuv/include \
 	-I$(top_srcdir)/clib/src \
-	-I$(top_builddir)/clib/src \
 	-I$(top_builddir)/clib/src
 
 if USE_UV
 AM_CPPFLAGS += -I$(top_srcdir)/h2o/include
 AM_CPPFLAGS += -I$(top_srcdir)/h2o
+endif
+
+if OCULUS_RIFT
+AM_CPPFLAGS += -I$(top_srcdir)/LibOVR/Src
 endif
 
 AM_CFLAGS = \
@@ -41,6 +44,9 @@ if USE_GSTREAMER
 common_ldadd += $(top_builddir)/cogl-gst/libcogl-gst.la
 endif
 
+if OCULUS_RIFT
+common_ldadd += $(top_builddir)/LibOVR/libOVR.la
+endif
 
 programs = cogl-info
 emscripten_programs = cogl-info
@@ -102,6 +108,12 @@ if COGL_SUPPORT_SDL2
 programs += cogl-sdl2-hello
 cogl_sdl2_hello_SOURCES = cogl-sdl2-hello.c
 cogl_sdl2_hello_LDADD = $(common_ldadd)
+endif
+
+if OCULUS_RIFT
+programs += vr-test
+vr_test_SOURCES = vr-test.c
+vr_test_LDADD = $(common_ldadd)
 endif
 
 programs += shell-hello
