--- a/tests/conform/Makefile.am
+++ b/tests/conform/Makefile.am
@@ -137,9 +137,10 @@ AM_CPPFLAGS += \
 	-DCOGL_DISABLE_DEPRECATED \
 	-DTESTS_DATADIR=\""$(top_srcdir)/tests/data"\"
 
-test_conformance_CFLAGS = -g3 -O0 $(COGL_DEP_CFLAGS) $(COGL_EXTRA_CFLAGS)
+test_conformance_CFLAGS = -g3 -O0 $(RIG_DEP_CFLAGS) $(RIG_EXTRA_CFLAGS)
 test_conformance_LDADD = \
-	$(COGL_DEP_LIBS) \
+	$(RIG_EXTRA_LDFLAGS) \
+	$(RIG_DEP_LIBS) \
 	$(top_builddir)/cogl/libcogl2.la \
 	$(LIBM)
 if BUILD_COGL_PATH
