Add initial Oculus Rift support
This adds command line options for running rig-slave/device in oculus
rift mode and rig-camera-view is updated to use the SDK to discover a
HMD and manage stereoscopic rendering and allowing the head tracking
to update the camera orientation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,9 @@ if EDITOR_ENABLED
 SUBDIRS += xdgmime
 endif
 
+if OCULUS_RIFT
 SUBDIRS += LibOVR
+endif
 
 SUBDIRS += rut data rig tests toys po android
 
