--- a/rig/Makefile.sources
+++ b/rig/Makefile.sources
@@ -26,6 +26,8 @@ rig_common_sources = \
 	components/rig-pointalism-grid.c \
 	components/rig-button-input.h \
 	components/rig-button-input.c \
+	components/rig-native-module.h \
+	components/rig-native-module.c \
 	components/rig-text.h \
 	components/rig-text.c \
 	rig-logs.h \
@@ -81,6 +83,8 @@ rig_common_sources = \
 	rig-ui.c \
 	rig-code.h \
 	rig-code.c \
+	rig-code-module.h \
+	rig-code-module.c \
 	usc_impl.h \
 	usc_impl.c \
 	rig-text-pipeline-cache.h \
