--- a/research/particle-engine/pe/Makefile.am
+++ b/research/particle-engine/pe/Makefile.am
@@ -1,6 +1,7 @@
 AM_CFLAGS = \
 	$(COGL_DEP_CFLAGS) \
 	-I$(top_srcdir) \
+	-I$(top_srcdir)/libuv/include \
 	-I$(top_srcdir)/clib/src \
 	-I$(top_builddir)/clib/src
 
