--- a/rut/Makefile.am
+++ b/rut/Makefile.am
@@ -51,6 +51,7 @@ librut_la_CFLAGS = \
 librut_la_CPPFLAGS = \
     -I$(top_srcdir) \
     -I$(top_builddir) \
+    -I$(top_srcdir)/libuv/include \
     -I$(top_srcdir)/clib/src \
     -I$(top_builddir)/clib/src \
     -I$(top_srcdir)/rut
