--- a/rig/Makefile.am
+++ b/rig/Makefile.am
@@ -5,6 +5,7 @@ include Makefile.sources
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_builddir) \
+	-I$(top_srcdir)/libuv/include \
 	-I$(top_srcdir)/clib/src \
 	-I$(top_builddir)/clib/src \
 	-I$(top_srcdir)/xdgmime \
