--- a/configure.ac
+++ b/configure.ac
@@ -333,7 +333,7 @@ dnl ================================================================
 dnl Check for dependency packages.
 dnl ================================================================
 
-RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES icu-uc harfbuzz harfbuzz-icu fontconfig freetype2 libprotobuf-c"
+RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES fontconfig freetype2 libprotobuf-c"
 
 dnl libuv...
 use_uv=no
@@ -520,9 +520,6 @@ AS_IF([test -n "$CLIB_PKG_REQUIRES"],
 
 AC_SUBST(RIG_PKG_REQUIRES)
 PKG_CHECK_MODULES(RIG_DEP, [$RIG_PKG_REQUIRES])
-
-PKG_CHECK_VAR(ICU_PREFIX, icu-uc, prefix, [],
-              [ AC_MSG_ERROR([Could not locate ICU data]) ])
 
 dnl ============================================================
 dnl Optional LLVM Enable
