rut: split out text-blob code from rut-shell

--- a/rut/Makefile.sources
+++ b/rut/Makefile.sources
@@ -117,6 +117,8 @@ rut_sdl_sources = \
 rut_editor_sources = \
     rut-text-buffer.h \
     rut-text-buffer.c \
+    rut-text-blob.h \
+    rut-text-blob.c \
     rut-text.h \
     rut-text.c \
     rut-number-slider.h \
