cogl: add HTMLImage support
Adds cg_web_image_t api for asynchronously loading images
Adds cg_webgl_texture_2d_new_from_image api

--- a/cogl/Makefile.sources
+++ b/cogl/Makefile.sources
@@ -282,6 +282,8 @@ cogl_uv_sources_c = cogl-uv.c cogl-uv-private.h
 
 cogl_webgl_sources_h = cogl-webgl.h cogl-webgl-renderer.h
 cogl_webgl_sources_c = \
+	cogl-webgl-private.h \
+	cogl-webgl.c \
 	cogl-webgl-renderer.c \
 	winsys/cogl-winsys-webgl-private.h \
 	winsys/cogl-winsys-webgl.c
