rig: start adding native-module component + editor2
The aim is to be able to reimplement the editor as a rig based ui and
as a step towards that this adds a component that can load a DSO so
native code can e.g. hook into input handling and frame updates with
the idea that some of the existing editor code can be de-coupled from
Rig internals and instead loaded via this native module component.

--- a/rig/Makefile.sources
+++ b/rig/Makefile.sources
@@ -76,7 +76,9 @@ rig_common_sources = \
 	rig-ui.h \
 	rig-ui.c \
 	rig-code.h \
-	rig-code.c
+	rig-code.c \
+	rig-code-module.h \
+	rig-code-module.c
 
 rig_debug_sources = \
 	rig-pb-debug.h \
@@ -114,4 +116,5 @@ rig_slave_sources = \
 
 rig_device_sources =
 
-rig_simulator_sources =
+rig_simulator_sources = \
+	rig-c.c
