--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,7 @@ AC_CANONICAL_HOST
 cflags_set=${CFLAGS+set}
 
 AM_INIT_AUTOMAKE([1.11 foreign -Wno-portability no-define no-dist-gzip
-                  dist-bzip2])
+                  dist-bzip2 subdir-objects])
 AM_SILENT_RULES([yes])
 
 AH_BOTTOM([#include "config-custom.h"])
@@ -103,10 +103,6 @@ dnl Compiler stuff.
 dnl ================================================================
 AC_USE_SYSTEM_EXTENSIONS
 AC_PROG_CC
-AC_PROG_CPP
-AM_PROG_CC_C_O
-AC_ISC_POSIX
-AC_C_CONST
 AC_PROG_OBJC
 AC_PROG_CXX
 
@@ -142,9 +138,10 @@ dnl ================================================================
 m4_define([default], [m4_if(release_status, [git], [yes], [no])])
 AC_ARG_ENABLE(
   [debug],
-  [AC_HELP_STRING([--enable-debug=@<:@no/yes@:>@], [Control debugging level @<:@default=]default[@:>@])],
-  [],
-  enable_debug=default
+  [AC_HELP_STRING([--enable-debug=@<:@no/yes@:>@],
+                  [Control debugging level @<:@default=]default[@:>@])],
+  [enable_debug="$enableval"],
+  [enable_debug=default]
 )
 AS_CASE(
   [$enable_debug],
@@ -159,18 +156,27 @@ AS_CASE(
   ],
   [no],
   [
-    RIG_EXTRA_CFLAGS="$RIG_EXTRA_CFLAGS -DRIG_ENABLE_DEBUG -DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS"
+    RIG_EXTRA_CFLAGS="$RIG_EXTRA_CFLAGS -DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS"
   ],
   [AC_MSG_ERROR([Unknown argument for --enable-debug])]
 )
 AM_CONDITIONAL(RIG_DEBUG, [test "$enable_debug" = "yes"])
+
+AC_CHECK_HEADER([execinfo.h], [have_backtrace=yes], [have_backtrace=no])
+AC_CHECK_FUNC([backtrace], [], [have_backtrace=no])
+AC_CHECK_FUNC([backtrace_symbols], [], [have_backtrace=no])
+
+AS_IF([test "x$have_backtrace" = "xyes"],
+      [AC_DEFINE([HAVE_BACKTRACE],
+                 [1],
+                 [Define if backtracing is available])])
 
 AC_ARG_ENABLE(
   [refcount_debug],
   [AC_HELP_STRING([--enable-refcount-debug=@<:@no/yes@:>@],
                   [Enable tracking refcounts @<:@default=]default[@:>@])],
   [enable_refcount_debug="$enableval"],
-  [enable_refcount_debug="$enable_debug"]
+  [enable_refcount_debug="$have_backtrace"]
 )
 AS_CASE(
   [$enable_refcount_debug],
@@ -182,17 +188,6 @@ AS_CASE(
   [no], [],
   [AC_MSG_ERROR([Unknown argument for --enable-refcount-debug])]
 )
-
-AS_IF([test "x$enable_refcount_debug" = "xyes"],
-      [AC_CHECK_HEADER([execinfo.h], [have_backtrace=yes], [have_backtrace=no])
-       AC_CHECK_FUNC([backtrace], [], [have_backtrace=no])
-       AC_CHECK_FUNC([backtrace_symbols], [], [have_backtrace=no])],
-      [have_backtrace=no])
-
-AS_IF([test "x$have_backtrace" = "xyes"],
-      [AC_DEFINE([HAVE_BACKTRACE],
-                 [1],
-                 [Define if backtracing is available])])
 
 # use strict compiler flags only when building from git; the rules for
 # distcheck will take care of turning this on when making a release
@@ -276,7 +271,7 @@ AC_ARG_ENABLE(uninstalled-build,
               AC_HELP_STRING([--enable-uninstalled-build],
 			     [Search for files in build directory as well]),
 	      enable_uninstalled=yes,)
-if test x"$enable_uninstalled" = xyes; then
+if test "x$enable_uninstalled" = xyes; then
 	AC_DEFINE_UNQUOTED(
         SHARE_UNINSTALLED_DIR,"`pwd`/rig/data",[path to source data dir])
 fi
@@ -286,7 +281,7 @@ AC_ARG_ENABLE(editor,
 			     [Disable building the interactive editor]),
               [],
 	      [enable_editor=yes])
-AS_IF([test x"$enable_editor" = xyes],
+AS_IF([test "x$enable_editor" = xyes],
       [
 	AC_DEFINE(RIG_EDITOR_ENABLED, [1], [Whether to build the editor or not])
 	AC_DEFINE(RUT_EDITOR_ENABLED, [1], [Whether to build the editor or not])
@@ -308,10 +303,6 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([const int thing = __alignof__ (int);],
                    AC_MSG_RESULT([yes])],
                   [AC_MSG_RESULT([no])])
 
-AC_CHECK_HEADERS(alloca.h)
-AC_CHECK_HEADERS(sys/poll.h)
-AC_CHECK_HEADERS(sys/select.h)
-
 
 dnl ================================================================
 dnl Check for dependency packages.
@@ -319,8 +310,19 @@ dnl ================================================================
 
 RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES icu-uc harfbuzz harfbuzz-icu fontconfig freetype2 libprotobuf-c"
 
+dnl libuv...
 AM_CONDITIONAL([USE_UV], [true])
 AC_DEFINE([USE_UV], [1], [Use libuv])
+
+dnl SpiderMonkey
+have_mozjs=no
+PKG_CHECK_EXISTS([mozjs-24],
+                 [
+                   have_mozjs=yes
+                   AC_DEFINE([USE_MOZJS], [1], [Use Mozilla SpiderMonkey Javascript engine])
+                   RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES mozjs-24"
+                 ])
+AM_CONDITIONAL([USE_MOZJS], [test "x$have_mozjs" = xyes])
 
 dnl     ============================================================
 dnl     Check glib dependencies
@@ -328,11 +330,15 @@ dnl     ============================================================
 AM_PATH_GLIB_2_0([2.26.0],
                  [have_glib=yes], [have_glib=no],
                  [gobject gthread gmodule-no-export])
-AS_IF([test x"$enable_editor" = xyes],
-    RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES pangocairo glib-2.0 gio-2.0 gdk-pixbuf-2.0"
-    AC_DEFINE([USE_GLIB], [1], [Use Glib])
+
+AC_DEFINE([USE_GDK_PIXBUF], [1], [Use GDK Pixbuf])
+AC_DEFINE([USE_GLIB], [1], [Use Glib])
+
+RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES glib-2.0 gio-2.0 gdk-pixbuf-2.0"
+
+AS_IF([test "x$enable_editor" = xyes],
+    RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES pangocairo"
     AC_DEFINE([USE_PANGO], [1], [Use Pango])
-    AC_DEFINE([USE_GDK_PIXBUF], [1], [Use GDK Pixbuf])
 )
 AM_CONDITIONAL([USE_GLIB], ["x$enable_editor" = xyes])
 
@@ -427,62 +433,56 @@ dnl ================================================================
 
 case "$host" in
   *-linux*)
-    enable_glib=$enable_editor
+    enable_glib=yes # TODO: need to remove dependency on gdk-pixbuf
     enable_cogl_path=yes
     enable_cogl_pango=$enable_editor
     enable_uv=yes
     enable_gl=yes
     enable_glx=yes
     enable_xlib_egl_platform=yes
+
+    RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES xkbcommon-x11"
+    RIG_EXTRA_LDFLAGS="$RIG_EXTRA_LDFLAGS -lXi"
+    AC_DEFINE([USE_X11], [1], [Defined if X11 should be used])
+
+    AS_IF([test "x$enable_editor" = xyes],
+          CheckForGtk
+          RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES avahi-glib avahi-client avahi-core"
+          AC_DEFINE([USE_AVAHI], [1], [Defined if Avahi should be used])
+          avahi_enabled=yes
+          )
     ;;
+
+  *-darwin*)
+    RIG_EXTRA_LDFLAGS="$RIG_EXTRA_LDFLAGS -lobjc -Wl,-framework,Cocoa"
+    platform=osx
+    ;;
+
   *)
     enable_cogl_path=yes
     enable_cogl_pango=$enable_editor
     enable_sdl2=yes
     enable_uv=yes
     enable_gles2=yes
+
+    AC_DEFINE([USE_SDL], [1], [Defined if SDL should be used])
+    RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES sdl2-rig"
   ;;
 esac
 
-AM_COGL
-
-
-AS_IF([test x"$enable_glx" = xyes],
-      [
-        RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES xkbcommon-x11"
-        RIG_EXTRA_LDFLAGS="$RIG_EXTRA_LDFLAGS -lXi"
-        AC_DEFINE([USE_X11], [1], [Defined if X11 should be used])
-      ],
-      [
-        AC_DEFINE([USE_SDL], [1], [Defined if SDL should be used])
-        RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES sdl2-rig"
-      ])
-AM_CONDITIONAL([USE_X11], [x$SUPPORT_GLX = xyes])
-AM_CONDITIONAL([USE_SDL], [x$SUPPORT_GLX != xyes])
-
-case "$host" in
-  *-linux*)
-    AS_IF([test x"$enable_editor" = xyes],
-        CheckForGtk
-        RIG_PKG_REQUIRES="$RIG_PKG_REQUIRES avahi-glib avahi-client avahi-core"
-        AC_DEFINE([USE_AVAHI], [1], [Defined if Avahi should be used])
-        avahi_enabled=yes
-    )
-    ;;
-  *-darwin*)
-    RIG_EXTRA_LDFLAGS="$RIG_EXTRA_LDFLAGS -lobjc -Wl,-framework,Cocoa"
-    platform=osx
-    ;;
-  *-*-cygwin* | *-*-mingw32*)
-    ;;
-  *)
-    AC_MSG_ERROR([Unsupported host: Please add to configure.ac])
-    ;;
-esac
-
+AM_CONDITIONAL([USE_X11], [x$enable_glx = xyes])
+AM_CONDITIONAL([USE_SDL], [x$enable_sdl2 = xyes])
 AM_CONDITIONAL([HAVE_OSX], [test "x$platform" = "xosx"])
 AM_CONDITIONAL([HAVE_GTK], [test "x$enable_gtk" = "xyes"])
 AM_CONDITIONAL([HAVE_AVAHI], [test "x$avahi_enabled" = "xyes"])
+
+AM_COGL
+
+AC_SUBST(CLIB_PKG_REQUIRES)
+AS_IF([test -n "$CLIB_PKG_REQUIRES"],
+      [
+        PKG_CHECK_MODULES(CLIB_DEP, [$CLIB_PKG_REQUIRES])
+      ])
 
 AC_SUBST(RIG_PKG_REQUIRES)
 PKG_CHECK_MODULES(RIG_DEP, [$RIG_PKG_REQUIRES])
@@ -534,27 +534,12 @@ AC_SUBST(RIG_LLVM_VERSION)
 dnl ================================================================
 dnl Misc program dependencies.
 dnl ================================================================
-AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 AC_PROG_INSTALL
 
 dnl ================================================================
 dnl GObject-Introspection check
 dnl ================================================================
 GOBJECT_INTROSPECTION_CHECK([gi_req_version])
-
-
-dnl ================================================================
-dnl Checks for header files.
-dnl ================================================================
-AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h limits.h unistd.h signal.h malloc.h)
-
-
-dnl ================================================================
-dnl Checks for library functions.
-dnl ================================================================
-AC_TYPE_SIGNAL
-AC_CHECK_FUNCS(putenv strdup)
 
 
 dnl ================================================================
@@ -577,7 +562,6 @@ test-fixtures/Makefile
 libuv/Makefile
 clib/Makefile
 clib/src/Makefile
-clib/src/clib-config.h
 xdgmime/Makefile
 rut/Makefile
 data/Makefile
